spacing problem solved

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -12,6 +12,7 @@
   padding: 20px 40px;
   cursor: pointer;
   border: 1px solid #ccc9c9;
+  margin-bottom: 20px;
 }
 
 .answer {
