--- a/src/Components/FlashCards/FlashCards.css
+++ b/src/Components/FlashCards/FlashCards.css
@@ -7,7 +7,7 @@
 .cards {
   width: 90%;
   min-height: 100vh;
-  margin: 0px auto;
+  margin: 20px auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
